--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c   # 3.3.0
 
+      - name: Setup JDK 8
+        uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b   # 3.7.0
+        with:
+          distribution: temurin
+          java-version: 8
+          java-package: jdk
+          architecture: x64
+          cache: maven
+
       - name: Setup JDK 11
         uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b   # 3.7.0
         with:
@@ -58,6 +67,8 @@ jobs:
       # For details, see: https://maven.apache.org/guides/mini/guide-reproducible-builds.html#how-to-test-my-maven-build-reproducibility
       - name: Build
         shell: bash
+        env:
+          JAVA_HOME: $JAVA_HOME_11_X64
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
@@ -69,6 +80,8 @@ jobs:
       # For details, see: https://maven.apache.org/guides/mini/guide-reproducible-builds.html#how-to-test-my-maven-build-reproducibility
       - name: Report build reproducibility
         shell: bash
+        env:
+          JAVA_HOME: $JAVA_HOME_11_X64
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
