--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ macos-latest, ubuntu-latest, windows-latest ]
+        #os: [ macos-latest, ubuntu-latest, windows-latest ]
+        os: [ windows-latest ]
 
     steps:
 
