Fix `maven-plugin-api` version at 3.6.x

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -20,6 +20,10 @@ updates:
     schedule:
       interval: daily
     open-pull-requests-limit: 10
+    ignore:
+      # Keep at version 3.6.x
+      - dependency-name: "org.apache.maven:maven-plugin-api"
+        update-types: ["version-update:semver-major", "version-update:semver-minor"]
 
   - package-ecosystem: github-actions
     directory: "/"
