--- a/log4j-transform-parent/pom.xml
+++ b/log4j-transform-parent/pom.xml
@@ -54,6 +54,7 @@
     <findsecbugs-plugin.version>1.12.0</findsecbugs-plugin.version>
     <maven-invoker-plugin.version>3.5.1</maven-invoker-plugin.version>
     <spotbugs-maven-plugin.version>4.7.3.4</spotbugs-maven-plugin.version>
+    <surefire.toolchain.range>[1.8, 9)</surefire.toolchain.range>
     <surefire.version>3.0.0-M7</surefire.version>
   </properties>
   <dependencyManagement>
@@ -245,7 +246,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <jdkToolchain>
-            <version>${java.version}</version>
+            <version>${surefire.toolchain.range}</version>
           </jdkToolchain>
         </configuration>
       </plugin>
