--- a/log4j-transform-maven-plugin/src/it/location/pom.xml
+++ b/log4j-transform-maven-plugin/src/it/location/pom.xml
@@ -57,7 +57,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>generate-location</goal>
+              <goal>process-classes</goal>
             </goals>
           </execution>
         </executions>
