Add documentation and changelogs

--- a/log4j-transform-maven-plugin/pom.xml
+++ b/log4j-transform-maven-plugin/pom.xml
@@ -96,6 +96,13 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <configuration>
+          <goalPrefix>log4j-transform</goalPrefix>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
