--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,9 +28,7 @@ on:
       - "**.md"
       - "**.txt"
 
-permissions:
-  contents: write
-  pull-requests: write
+permissions: read-all
 
 jobs:
 
@@ -47,20 +45,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab   # 3.5.2
 
-      - name: Setup JDK 8
+      - name: Setup JDK 8 and 17
         uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2   # 3.7.0
         with:
           distribution: temurin
-          java-version: 8
-          java-package: jdk
-          architecture: x64
-          cache: maven
-
-      - name: Setup JDK 11
-        uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2   # 3.7.0
-        with:
-          distribution: temurin
-          java-version: 11
+          java-version: |
+            8
+            17
           java-package: jdk
           architecture: x64
           cache: maven
@@ -69,54 +60,47 @@ jobs:
       # For details, see: https://maven.apache.org/guides/mini/guide-reproducible-builds.html#how-to-test-my-maven-build-reproducibility
       - name: Build
         shell: bash
-        env:
-          JAVA_HOME: ${{ env.JAVA_HOME_11_X64 }}
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
             -DtrimStackTrace=false \
             -DinstallAtEnd=true \
+            -Pjava8-tests
             clean install
 
       # `clean verify artifact:compare` is required to generate the build reproducibility report.
       # For details, see: https://maven.apache.org/guides/mini/guide-reproducible-builds.html#how-to-test-my-maven-build-reproducibility
       - name: Report build reproducibility
+        id: report-reproducible
+        timeout-minutes: 10
         shell: bash
-        env:
-          JAVA_HOME: ${{ env.JAVA_HOME_11_X64 }}
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
             -DskipTests=true \
             clean verify artifact:compare
 
-      - name: Verify build reproducibility
-        shell: bash
-        run: |
-          for report_file in target/*.buildcompare **/target/*.buildcompare; do
-            if ! grep -q "^ko=0$" "$report_file"; then
-              echo "Spotted build reproducibility failure in \`$report_file\`:"
-              cat "$report_file"
-              exit 1
-            fi
-          done
+      - name: Upload reproducibility failure context artifacts
+        if: failure()
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce   # 3.1.2
+        with:
+          name: reproducibility-failure-context-${{matrix.os}}
+          path: |
+            **/target/*.buildcompare
+            **/target/*.jar
+            **/target/reference/*.jar
 
   merge:
 
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.actor == 'dependabot[bot]'
     needs: build
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
-
-      - name: "[dependabot] Fetch metadata"
-        id: metadata
-        if: github.event_name == 'pull_request' && github.actor == 'dependabot[bot]'
-        uses: dependabot/fetch-metadata@v1.4.0
-        with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-
       - name: "[dependabot] Auto-merge the PR"
-        if: github.event_name == 'pull_request' && github.actor == 'dependabot[bot]'
         run: gh pr merge --auto --squash "$PR_URL"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
