--- a/log4j-transform-maven-plugin/src/it/pomproject/pom.xml
+++ b/log4j-transform-maven-plugin/src/it/pomproject/pom.xml
@@ -18,19 +18,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-transform-parent</artifactId>
-    <version>${revision}</version>
-    <relativePath>../../../../log4j-transform-parent</relativePath>
+    <groupId>org.apache.logging</groupId>
+    <artifactId>logging-parent</artifactId>
+    <version>9</version>
+    <relativePath />
   </parent>
   <groupId>org.apache.logging.log4j.maven.it</groupId>
   <artifactId>log4j-maven-it-pomproject</artifactId>
+  <version>@project.version@</version>
   <packaging>pom</packaging>
   <name>Apache Log4j Maven plugin test</name>
   <description>The Apache Log4j Maven plugin test</description>
   <properties>
     <log4j2.version>2.20.0</log4j2.version>
-    <revision>0.1.0-SNAPSHOT</revision>
   </properties>
   <build>
     <plugins>
