--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
     <minimalJavaBuildVersion>[17,18)</minimalJavaBuildVersion>
     <java.version>8</java.version>
     <!-- `project.build.outputTimestamp` is required for reproducible builds: https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
-    <project.build.outputTimestamp>0</project.build.outputTimestamp>
+    <project.build.outputTimestamp>1682712801</project.build.outputTimestamp>
     <!-- plugin versions -->
     <flatten-maven-plugin.version>1.4.1</flatten-maven-plugin.version>
     <sign-maven-plugin.version>1.0.1</sign-maven-plugin.version>
@@ -126,6 +126,12 @@
                  This makes `flatten:clean` redundant. -->
             <outputDirectory>${project.build.directory}</outputDirectory>
           </configuration>
+        </plugin>
+        <!-- Downgrade until https://issues.apache.org/jira/browse/MRELEASE-1091 is reverted -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>3.0.0-M5</version>
         </plugin>
       </plugins>
     </pluginManagement>
