--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>3.0.0-M5</version>
+          <configuration>
+            <autoVersionSubmodules>true</autoVersionSubmodules>
+            <preparationGoals>clean spotless:apply verify</preparationGoals>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
