--- a/log4j-weaver/pom.xml
+++ b/log4j-weaver/pom.xml
@@ -20,16 +20,12 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-transform-parent</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
     <relativePath>../log4j-transform-parent</relativePath>
   </parent>
   <artifactId>log4j-weaver</artifactId>
   <name>Apache Log4j Weaving Tools</name>
   <description>The Apache Log4j Weaving Tools for logging frameworks</description>
-
-  <scm>
-    <tag>rel/0.1.0.rc1</tag>
-  </scm>
   <dependencies>
     <dependency>
       <groupId>org.ow2.asm</groupId>
