--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-transform-bom</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <url>https://github.com/apache/logging-log4j-transform</url>
   <inceptionYear>2022</inceptionYear>
@@ -69,7 +69,7 @@
   <scm>
     <connection>scm:git:git@github.com:apache/logging-log4j-transform.git</connection>
     <developerConnection>scm:git:git@github.com:apache/logging-log4j-transform.git</developerConnection>
-    <tag>rel/0.1.0.rc1</tag>
+    <tag>HEAD</tag>
     <url>https://github.com/apache/logging-log4j-transform</url>
   </scm>
   <issueManagement>
@@ -86,7 +86,7 @@
   </distributionManagement>
   <properties>
     <!-- project version -->
-    <revision>0.1.0</revision>
+    <revision>0.1.1-SNAPSHOT</revision>
     <!-- `minimalJavaBuildVersion` is employed by `org.apache:apache`,
       which is the parent of `org.apache.logging:logging-parent`, which is the parent of us.
         `minimalJavaBuildVersion` is used for enforcing the compiler version.
@@ -95,7 +95,7 @@
     <minimalJavaBuildVersion>[17,18)</minimalJavaBuildVersion>
     <java.version>8</java.version>
     <!-- `project.build.outputTimestamp` is required for reproducible builds: https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
-    <project.build.outputTimestamp>1682714623</project.build.outputTimestamp>
+    <project.build.outputTimestamp>1682714736</project.build.outputTimestamp>
     <!-- plugin versions -->
     <flatten-maven-plugin.version>1.4.1</flatten-maven-plugin.version>
     <sign-maven-plugin.version>1.0.1</sign-maven-plugin.version>
