--- a/log4j-weaver/pom.xml
+++ b/log4j-weaver/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-transform-parent</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <relativePath>../log4j-transform-parent</relativePath>
   </parent>
   <artifactId>log4j-weaver</artifactId>
