--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-transform-bom</artifactId>
-  <version>0.1.1-SNAPSHOT</version>
+  <version>${revision}</version>
   <packaging>pom</packaging>
   <url>https://github.com/apache/logging-log4j-transform</url>
   <inceptionYear>2022</inceptionYear>
@@ -86,7 +86,7 @@
   </distributionManagement>
   <properties>
     <!-- project version -->
-    <revision>0.1.1-SNAPSHOT</revision>
+    <revision>0.1.0-SNAPSHOT</revision>
     <!-- `minimalJavaBuildVersion` is employed by `org.apache:apache`,
       which is the parent of `org.apache.logging:logging-parent`, which is the parent of us.
         `minimalJavaBuildVersion` is used for enforcing the compiler version.
@@ -105,12 +105,12 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-transform-maven-plugin</artifactId>
-        <version>${revision}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-weaver</artifactId>
-        <version>${revision}</version>
+        <version>${project.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
