--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,22 @@
         <skipTests>true</skipTests>
       </properties>
       <build>
+        <defaultGoal>deploy</defaultGoal>
         <plugins>
+
+          <plugin>
+            <groupId>org.simplify4u.plugins</groupId>
+            <artifactId>sign-maven-plugin</artifactId>
+            <version>${sign-maven-plugin.version}</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
           <!-- We want to deploy the artifact to a staging location for perusal -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -190,6 +205,7 @@
               <updateReleaseInfo>true</updateReleaseInfo>
             </configuration>
           </plugin>
+
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
@@ -202,6 +218,7 @@
               </execution>
             </executions>
           </plugin>
+
         </plugins>
       </build>
     </profile>
