--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
   </distributionManagement>
   <properties>
     <!-- project version -->
-    <revision>0.1.0-SNAPSHOT</revision>
+    <revision>0.1.0</revision>
     <!-- `minimalJavaBuildVersion` is employed by `org.apache:apache`,
       which is the parent of `org.apache.logging:logging-parent`, which is the parent of us.
         `minimalJavaBuildVersion` is used for enforcing the compiler version.
@@ -95,7 +95,7 @@
     <minimalJavaBuildVersion>[17,18)</minimalJavaBuildVersion>
     <java.version>8</java.version>
     <!-- `project.build.outputTimestamp` is required for reproducible builds: https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
-    <project.build.outputTimestamp>1682714736</project.build.outputTimestamp>
+    <project.build.outputTimestamp>1683307797</project.build.outputTimestamp>
     <!-- plugin versions -->
     <checksum-maven-plugin.version>1.11</checksum-maven-plugin.version>
     <flatten-maven-plugin.version>1.4.1</flatten-maven-plugin.version>
