--- a/log4j-transform-parent/pom.xml
+++ b/log4j-transform-parent/pom.xml
@@ -41,6 +41,7 @@
     <commons-logging.version>1.2</commons-logging.version>
     <commons-io.version>2.11.0</commons-io.version>
     <freemarker.version>2.3.32</freemarker.version>
+    <jmh.version>1.36</jmh.version>
     <junit.version>5.9.3</junit.version>
     <log4j2.version>2.20.0</log4j2.version>
     <maven.version>3.6.3</maven.version>
@@ -103,6 +104,11 @@
         <groupId>org.freemarker</groupId>
         <artifactId>freemarker</artifactId>
         <version>${freemarker.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.openjdk.jmh</groupId>
+        <artifactId>jmh-core</artifactId>
+        <version>${jmh.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
