--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
     <!-- the parent POM must come first: -->
     <module>log4j-transform-parent</module>
     <module>log4j-transform-maven-plugin</module>
+    <module>log4j-transform-perf</module>
     <module>log4j-weaver</module>
     <module>log4j-transform-maven-shade-plugin-extensions</module>
   </modules>
