--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+## Keep in sync with src/assembly/source-assembly.xml
 target/
 # IntelliJ IDEA
 .idea
