--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,3 +195,14 @@ jobs:
         with:
           name: Sources
           path: target/apache-log4j-transform-*-src.zip*
+          if-no-file-found: error
+
+      - name: Tag version (RELEASE)
+        if: startsWith(github.ref, 'refs/heads/release/')
+        run: |
+          export RCN=$[ $(git tag -l "rel/$PROJECT_VERSION[-.]rc*" | wc -l) + 1 ]
+          export TAG="rel/$PROJECT_VERSION-rc$RCN"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git tag "$TAG" -m ""
+          git push origin "$TAG"
