--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
   </distributionManagement>
   <properties>
     <!-- project version -->
-    <revision>0.1.0</revision>
+    <revision>0.1.1-SNAPSHOT</revision>
     <!-- `minimalJavaBuildVersion` is employed by `org.apache:apache`,
       which is the parent of `org.apache.logging:logging-parent`, which is the parent of us.
         `minimalJavaBuildVersion` is used for enforcing the compiler version.
