--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -16,12 +16,22 @@
 #
 
 version: 2
+
+# Add Maven Central explicitly to work around:
+#   https://github.com/dependabot/dependabot-core/issues/8329
+registries:
+  maven-central:
+    type: maven-repository
+    url: https://repo.maven.apache.org/maven2
+
 updates:
   - package-ecosystem: maven
     directory: "/"
     schedule:
       interval: daily
     open-pull-requests-limit: 10
+    registries:
+      - maven-central
     ignore:
       # Keep at version 3.6.x
       - dependency-name: "org.apache.maven:maven-plugin-api"
