--- a/log4j-transform-parent/pom.xml
+++ b/log4j-transform-parent/pom.xml
@@ -38,7 +38,7 @@
     <commons-io.version>2.17.0</commons-io.version>
     <jmh.version>1.37</jmh.version>
     <junit.version>5.11.2</junit.version>
-    <log4j2.version>2.24.1</log4j2.version>
+    <log4j.version>2.24.1</log4j.version>
     <maven.version>3.9.9</maven.version>
     <plexus-utils.version>4.0.2</plexus-utils.version>
     <slf4j.version>2.0.16</slf4j.version>
@@ -73,7 +73,7 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-bom</artifactId>
-        <version>${log4j2.version}</version>
+        <version>${log4j.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
