--- a/log4j-config-converter/pom.xml
+++ b/log4j-config-converter/pom.xml
@@ -29,23 +29,27 @@
   <description>Converts between multiple Log4j configuration formats.</description>
 
   <properties>
-    <Main-Class>org.apache.logging.log4j.cli.generator.Generate</Main-Class>
+    <!-- Disabling `bnd-baseline-maven-plugin`, since we don't have a release yet to compare against. -->
+    <bnd.baseline.fail.on.missing>false</bnd.baseline.fail.on.missing>
+
+    <Main-Class>org.apache.logging.log4j.config.converter.Log4j1ConfigurationConverter</Main-Class>
 
     <!-- Plugin versions -->
     <maven-shade-plugin.version>3.4.1</maven-shade-plugin.version>
 
     <!-- Dependencies -->
+    <log4j2.version>3.0.0-SNAPSHOT</log4j2.version>
     <picocli.version>4.7.5</picocli.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
 
-    <dependency>
-      <groupId>info.picocli</groupId>
-      <artifactId>picocli</artifactId>
-      <version>${picocli.version}</version>
-    </dependency>
+      <dependency>
+        <groupId>info.picocli</groupId>
+        <artifactId>picocli</artifactId>
+        <version>${picocli.version}</version>
+      </dependency>
 
     </dependencies>
   </dependencyManagement>
@@ -57,7 +61,11 @@
       <artifactId>log4j-api</artifactId>
     </dependency>
 
-    <!-- Used by the configuration converter -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-1.2-api</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
@@ -117,6 +125,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
               <transformers>
                 <transformer implementation="org.apache.logging.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer" />
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
