--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
   <properties>
 
     <!-- project version -->
-    <revision>0.2.0-SNAPSHOT</revision>
+    <revision>0.2.0</revision>
 
     <!-- disable `maven-site-plugin`-->
     <maven.site.skip>true</maven.site.skip>
